基础设置==>产品模块 所有页面bootstrap样式

--- a/app/views/irm/data_accesses/_edit_form.html.erb
+++ b/app/views/irm/data_accesses/_edit_form.html.erb
@@ -7,7 +7,7 @@
         </td>
         <td class="page-block-button">
           <%= link_submit t(:save), :class=>"btn btn-primary" %>
-          <%= link_to t(:cancel),{:action => "index"},:class => "btn btn-cancel" %>
+          <%= link_to t(:cancel),{:action => "index"},:class => "btn cancel" %>
         </td>
       </tr></table>
       <div class="page-block-body">
