--- a/app/views/irm/product_modules/_data_grid.html.erb
+++ b/app/views/irm/product_modules/_data_grid.html.erb
@@ -1,36 +1,17 @@
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_product_module_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="productModulesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="product_modules_list" class="datatable" style="width:100%">
-          <div id="installed_flag" style="display:none">
-            <%= check_img("{installed_flag}") %>
-          </div>          
-          <div id="status_code" style="display:none">
-            <%= check_img("{status_code}") %>
-          </div>
-        </div>
-        <%= datatable("product_modules_list",{:action=>"get_data",:format=>"json"},
-                  [{:key=>"product_short_name",:label=>t(:label_irm_product_module_product_short_name), :width => "15%",:searchable=>true},
-                   {:key=>"name",:label=>t(:label_irm_product_module_name), :width => "30%",:searchable=>true},
-                   {:key=>"description",:label=>t(:label_irm_product_module_description)},
-                   {:key=>"installed_flag",:label=>t(:label_irm_product_module_installed_flag),:formatter=>"Y.irm.template", :width => "40px"},
-                   {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
-                   {:search_box=>"productModulesSearchBox"})%>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_product_module_list) %></h2>
+    </td>
+    <td class="page-block-button"></td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="person"></div>
+    <%= datatable("product_modules_list",{:action=>"get_data",:format=>"json"},[],{:search_box=>"searchBox",:paginator_box=>"paginatorBox"})%>
+    <div id="paginatorBox"></div>
+  </div>
 </div>
