--- a/app/views/irm/product_modules/_data_grid.html.erb
+++ b/app/views/irm/product_modules/_data_grid.html.erb
@@ -10,7 +10,7 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div id="person"></div>
+    <div id="product_modules_list"></div>
     <%= datatable("product_modules_list",{:action=>"get_data",:format=>"json"},[],{:search_box=>"searchBox",:paginator_box=>"paginatorBox"})%>
     <div id="paginatorBox"></div>
   </div>
