--- a/app/views/irm/currencies/_edit_form.html.erb
+++ b/app/views/irm/currencies/_edit_form.html.erb
@@ -1,67 +1,77 @@
 <%= setting_title %>
+<%= form_for(@currency,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_currency_code)%></label></td>
+            <td class="data-col"><label><%=@currency.currency_code%></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_precision)%></label></td>
+            <td class="data-col"><%=f.text_field :precision,:required=>true %></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name,:value=>@currency[:name], :required=>true %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col empty"><label><%=(t :status)%></label></td>
+            <td class="data-col empty"><%=f.select :status_code,"<option value=\"\">--- #{t(:actionview_instancetag_blank_option)} ---</option>".html_safe + options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@currency.status_code)%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_description)%></label></td>
+            <td class="data-col"><%=f.text_area :description,:value=>@currency[:description],:rows=>4,:class=>"input-xlarge"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action=>"index"}, {:class => "btn cancel"}%>
+  <% end %>
 
-<%= form_for(@currency,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_currency_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_currency_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <%= error_for @currency%>
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-  <div class="pbBody">
-    <%= error_for @currency%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend"><span class="requiredExampleOuter">
-          <span class="requiredExample">&nbsp;</span></span>
-           <span class="requiredMark">*</span><span class="requiredText"> = <%=t(:label_is_required)%></span></span></span>
-      <h3><%=t(:label_irm_currency_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_currency_currency_code)%></label></td>
-              <td class="dataCol"><%=@currency.currency_code%></td>
-              <td class="labelCol"><label><%=(t :label_irm_currency_precision)%></label></td>
-              <td class="dataCol"><%=f.text_field :precision,:required=>true %></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_currency_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name,:value=>@currency[:name], :required=>true %></td>
-              <td class="labelCol empty"><label><%=(t :status)%></label></td>
-              <td class="dataCol empty"><%=f.select :status_code,"<option value=\"\">--- #{t(:actionview_instancetag_blank_option)} ---</option>".html_safe +
-                                                options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@currency.status_code)%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_currency_description)%></label></td>
-              <td class="dataCol"><%=f.text_area :description,:value=>@currency[:description],:rows=>4%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
+
