--- a/app/views/irm/currencies/index.html.erb
+++ b/app/views/irm/currencies/index.html.erb
@@ -1,37 +1,20 @@
 <%= setting_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_currency_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="permissionsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="currency" class="datatable" style="width:100%;">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("currency",{:action=>"get_data",:format=>"json"},
-                  [{:key=>"id",:label=>t(:edit),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"currency_code",:label=>t(:label_irm_currency_currency_code),:searchable=>true,:width=>"10%"},
-                   {:key=>"precision",:label=>t(:label_irm_currency_precision),:width=>"40px"},
-                   {:key=>"name",:label=>t(:label_irm_currency_name),:searchable=>true,:width=>"20%"},
-                   {:key=>"description",:label=>t(:label_irm_currency_description)},
-                   {:key=>"status_meaning",:label=>t(:label_irm_currency_status_code),:width=>"40px"}],
-                   {:search_box=>"permissionsSearchBox",:paginator_box=>"currencyPaginator"})%>
-        <div id="currencyPaginator"></div>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_currency_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="currency"></div>
+    <%= datatable("currency",{:action=>"get_data"},[],{:search_box=>"searchBox",:paginator_box=>"paginatorBox"})%>
+    <div id="paginatorBox"></div>
+  </div>
 </div>
