--- a/app/views/irm/currencies/show.html.erb
+++ b/app/views/irm/currencies/show.html.erb
@@ -1,45 +1,54 @@
 <%= setting_show_title(:show_data => @currency.currency_code) %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <!-- 人员信息 -->
+  <table class="page-block-header">
+    <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_irm_currency_show) %>&nbsp;<%= t(:label_detail_info) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= link_to t(:edit), {:action => "edit", :id => @currency},:class=>"btn btn-primary" %>
+          <%= link_to t(:new),{:action => "new"},:class => "btn" %>
+          <%= link_to t(:back), {:action => "index"},:class=>"btn"%>
+        </td>
+    </tr>
+  </table>
+  <!-- 一般信息 -->
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title"><h2 class="block-title"><%= t(:label_common_info) %>:</h2></td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_currency_show) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @currency}%></div>
-            <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_currency_code)%></label></td>
+            <td class="data-col"><%=@currency.currency_code%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_precision)%></label></td>
+            <td class="data-col"><%=@currency.precision%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_name)%></label></td>
+            <td class="data-col"><%= @currency[:name]%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_currency_description)%></label></td>
+            <td class="data-col"><%= @currency[:description]%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_currency_currency_code)%></label></td>
-              <td class="dataCol"><%=@currency.currency_code%></td>
-              <td class="labelCol"><label><%=(t :label_irm_currency_precision)%></label></td>
-              <td class="dataCol"><%=@currency.precision%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_currency_name)%></label></td>
-              <td class="dataCol"><%= @currency[:name]%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_currency_description)%></label></td>
-              <td class="dataCol"><%= @currency[:description]%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
 
