--- a/app/views/irm/cloud_operations/index.html.erb
+++ b/app/views/irm/cloud_operations/index.html.erb
@@ -1,35 +1,18 @@
 <%= common_title(:model_meaning=>t(:label_irm_operation_unit)) %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_operation_unit_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-              </td>
-              <td class="pbHelp">
-                <div id="operation_unitsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="operation_units" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("operation_units",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       { :key => "name", :label => t(:label_irm_operation_unit_name),:searchable=>true },
-                       { :key => "short_name", :label => t(:label_irm_operation_unit_short_name),:searchable=>true },
-                       { :key => "license_name", :label => t(:label_irm_operation_unit_license),:searchable=>true },
-                      ],{:paginator_box=>"operation_unitsPaginatorBox",:search_box=>"operation_unitsSearchBox"})%>
-        <div id="operation_unitsPaginatorBox"></div>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_operation_unit_list) %></h2>
+    </td>
+    <td class="page-block-button"></td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="operation_units"></div>
+    <%= datatable("operation_units",{:action=>"get_data"},[],{:search_box=>"searchBox",:paginator_box=>"paginatorBox"})%>
+    <div id="paginatorBox"></div>
+  </div>
 </div>
-
-
