--- a/app/views/irm/external_systems/_edit_form.html.erb
+++ b/app/views/irm/external_systems/_edit_form.html.erb
@@ -44,6 +44,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @external_system %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
