--- a/app/views/irm/organization_infos/index.html.erb
+++ b/app/views/irm/organization_infos/index.html.erb
@@ -48,9 +48,7 @@
   </tr></table>
   <div class="page-block-body">
     <div id="organization_infos"></div>
-    <%= datatable("organization_infos",{:action=>"get_data",:format=>"json"},
-                          [
-                          ],{:paginator_box=>"organization_infosPaginatorBox",:search_box=>"organization_infosSearchBox"})%>
+    <%= datatable("organization_infos",{:action=>"get_data"},[],{:paginator_box=>"organization_infosPaginatorBox",:search_box=>"organization_infosSearchBox"})%>
     <div id="organization_infosPaginatorBox"></div>
   </div>
 </div>
