--- a/app/views/irm/people/_edit_form.html.erb
+++ b/app/views/irm/people/_edit_form.html.erb
@@ -132,6 +132,7 @@
         <% end %>
       </tr>
     </table>
+    <%= error_for @person %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 个人信息 -->
