--- a/app/views/irm/operation_units/_edit_form.html.erb
+++ b/app/views/irm/operation_units/_edit_form.html.erb
@@ -50,6 +50,7 @@
         <%= content_for :form_buttons   %>
       </td>
     </tr></table>
+    <%= error_for @operation_unit %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <div class="sub-page-block-header">
