--- a/app/views/irm/organization_infos/_new_form.html.erb
+++ b/app/views/irm/organization_infos/_new_form.html.erb
@@ -49,6 +49,7 @@
         <%= content_for :form_buttons   %>
       </td>
     </tr></table>
+    <%= error_for @organization_info %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <div class="sub-page-block-header">
