--- a/app/views/irm/organizations/_new_form.html.erb
+++ b/app/views/irm/organizations/_new_form.html.erb
@@ -48,6 +48,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @organization %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
