--- a/app/views/irm/people/_new_form.html.erb
+++ b/app/views/irm/people/_new_form.html.erb
@@ -124,6 +124,7 @@
           </td>
         </tr>
     </table>
+    <%= error_for @person %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 个人信息 -->
