--- a/app/views/irm/profiles/_edit_form.html.erb
+++ b/app/views/irm/profiles/_edit_form.html.erb
@@ -93,7 +93,7 @@
   <% end %>
   <% content_for :form_buttons  do %>
     <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
-    <%= link_back t(:cancel),{}, {:class => "btn cancel"}%>
+    <%= link_to t(:cancel),{:action => "index"}, {:class => "btn cancel"}%>
   <% end %>
 
   <!--页面结构-->
@@ -108,6 +108,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @profile %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
