--- a/app/views/irm/roles/_edit_form.html.erb
+++ b/app/views/irm/roles/_edit_form.html.erb
@@ -46,6 +46,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @role %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
