--- a/app/views/irm/roles/_new_form.html.erb
+++ b/app/views/irm/roles/_new_form.html.erb
@@ -45,6 +45,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @role %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
