--- a/app/views/icm/incident_phases/_edit_form.html.erb
+++ b/app/views/icm/incident_phases/_edit_form.html.erb
@@ -56,6 +56,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @incident_phase %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
