--- a/app/views/icm/incident_statuses/_new_form.html.erb
+++ b/app/views/icm/incident_statuses/_new_form.html.erb
@@ -73,6 +73,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @incident_status %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
