--- a/app/views/icm/incident_statuses/index.html.erb
+++ b/app/views/icm/incident_statuses/index.html.erb
@@ -79,9 +79,8 @@
     </tr>
   </table>
   <div class="page-block-body">
-    <div id="incident_status">
-      <%= datatable("incident_status",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"statusPaginator",:search_box=>"incidentStatusesSearchBox"})%>
-    </div>
+    <div id="incident_status"></div>
+    <%= datatable("incident_status",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"statusPaginator",:search_box=>"incidentStatusesSearchBox"})%>
     <div id="statusPaginator"></div>
   </div>
 </div>
