--- a/app/views/icm/mail_requests/edit.html.erb
+++ b/app/views/icm/mail_requests/edit.html.erb
@@ -94,6 +94,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @mail_request %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
