--- a/app/views/icm/mail_requests/index.html.erb
+++ b/app/views/icm/mail_requests/index.html.erb
@@ -16,9 +16,8 @@
     </tr>
   </table>
   <div class="page-block-body">
-    <div id="mail_requests_list">
-      <%= datatable("mail_requests_list",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"mailRequestPaginator",:search_box=>"mailRequestSearchBox"})%>
-    </div>
+    <div id="mail_requests_list"></div>
+    <%= datatable("mail_requests_list",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"mailRequestPaginator",:search_box=>"mailRequestSearchBox"})%>
     <div id="mailRequestPaginator"></div>
   </div>
 </div>
