--- a/app/views/icm/priority_codes/index.html.erb
+++ b/app/views/icm/priority_codes/index.html.erb
@@ -82,9 +82,8 @@
     </tr>
   </table>
   <div class="page-block-body">
-    <div id="priority_code">
-      <%= datatable("priority_code",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"priorityPaginator",:search_box=>"priorityCodesSearchBox"})%>
-    </div>
+    <div id="priority_code"></div>
+    <%= datatable("priority_code",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"priorityPaginator",:search_box=>"priorityCodesSearchBox"})%>
     <div id="priorityPaginator"></div>
   </div>
 </div>
