--- a/app/views/chm/change_statuses/_edit_form.html.erb
+++ b/app/views/chm/change_statuses/_edit_form.html.erb
@@ -52,6 +52,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @change_status %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
