--- a/app/views/chm/change_task_phases/index.html.erb
+++ b/app/views/chm/change_task_phases/index.html.erb
@@ -15,9 +15,8 @@
     </tr>
   </table>
   <div class="page-block-body">
-    <div id="task_phases">
-      <%= datatable("task_phases",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"task_phasesPaginatorBox",:search_box=>"task_phasesSearchBox"})%>
-    </div>
+    <div id="task_phases"></div>
+    <%= datatable("task_phases",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"task_phasesPaginatorBox",:search_box=>"task_phasesSearchBox"})%>
     <div id="task_phasesPaginatorBox"></div>
   </div>
 </div>
