--- a/app/views/icm/impact_ranges/_new_form.html.erb
+++ b/app/views/icm/impact_ranges/_new_form.html.erb
@@ -55,6 +55,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @impact_range %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
