--- a/app/views/icm/incident_categories/_edit_form.html.erb
+++ b/app/views/icm/incident_categories/_edit_form.html.erb
@@ -59,6 +59,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @incident_category %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
