--- a/app/views/icm/incident_categories/index.html.erb
+++ b/app/views/icm/incident_categories/index.html.erb
@@ -16,9 +16,8 @@
     </tr>
   </table>
   <div class="page-block-body">
-    <div id="incident_categories">
-      <%= datatable("incident_categories",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"incident_categoriesPaginatorBox",:search_box=>"incident_categoriesSearchBox"})%>
-    </div>
+    <div id="incident_categories"></div>
+    <%= datatable("incident_categories",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"incident_categoriesPaginatorBox",:search_box=>"incident_categoriesSearchBox"})%>
     <div id="incident_categoriesPaginatorBox"></div>
   </div>
 </div>
