--- a/app/views/icm/priority_codes/_edit_form.html.erb
+++ b/app/views/icm/priority_codes/_edit_form.html.erb
@@ -49,6 +49,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @priority_code %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
