--- a/app/views/icm/rule_settings/_edit_form.html.erb
+++ b/app/views/icm/rule_settings/_edit_form.html.erb
@@ -50,6 +50,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @rule_setting %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
