--- a/app/views/icm/support_groups/_edit_form.html.erb
+++ b/app/views/icm/support_groups/_edit_form.html.erb
@@ -60,6 +60,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @support_group %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
