--- a/app/views/icm/urgence_codes/_edit_form.html.erb
+++ b/app/views/icm/urgence_codes/_edit_form.html.erb
@@ -67,6 +67,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @urgence_code %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
