--- a/app/views/icm/urgence_codes/index.html.erb
+++ b/app/views/icm/urgence_codes/index.html.erb
@@ -16,9 +16,8 @@
     </tr>
   </table>
   <div class="page-block-body">
-    <div id="urgence_code">
-      <%= datatable("urgence_code",{:action=>"get_data",:format=>"json"},[], {:paginator_box=>"urgencePaginator",:search_box=>"urgenceCodesSearchBox"})%>
-    </div>
+    <div id="urgence_code"></div>
+    <%= datatable("urgence_code",{:action=>"get_data"},[], {:paginator_box=>"urgencePaginator",:search_box=>"urgenceCodesSearchBox"})%>
     <div id="urgencePaginator"></div>
   </div>
 </div>
