--- a/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap_ie6.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap_ie6.css.less
@@ -350,7 +350,7 @@ ul.thumbnails {
 /* Popover */
 .popover {
     opacity: 1;
-    filter: alpha(opacity = 100)
+    filter: alpha(100)
 }
 
 .popover.top .arrow, .popover.right .arrow, .popover.bottom .arrow, .popover.left .arrow {
