--- a/app/views/irm/wf_field_updates/_edit_form.html.erb
+++ b/app/views/irm/wf_field_updates/_edit_form.html.erb
@@ -1,84 +1,88 @@
-<%= form_for(@wf_field_update,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-  <%= hidden_params_field(:source_str)%>
-  <%= back_url_hidden_field_tag%>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+<%= form_for(@wf_field_update,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+    <%= hidden_params_field(:source_str)%>
+    <% content_for :form_block_a do %>
+        <table class="form-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label for="wf_field_update_name"><%=t(:label_irm_wf_field_update_name)%></label></td>
+                <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"wf_field_update_name"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_field_update_field_update_code"><%=t(:label_irm_wf_field_update_field_update_code)%></label></td>
+                <td class="data-col"><%=f.text_field :field_update_code ,:irm_uppercase=>true,:required=>true ,:id=>"wf_field_update_field_update_code"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_field_update_description"><%=(t :label_irm_wf_field_update_description)%></label></td>
+                <td class="data-col" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60,:id=>"wf_field_update_description"%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="bo_code"><%=t(:label_irm_wf_field_update_bo_code)%></label></td>
+                <td class="data-col"><label><%=@wf_field_update[:bo_name]%></label></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="object_attribute"><%=t(:label_irm_wf_field_update_object_attribute)%></label></td>
+                <td class="data-col"><label><%=@wf_field_update[:object_attribute_name]%></label></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+          </tbody>
+        </table>
+    <% end %>
+    <% content_for :form_block_b do%>
+        <%= render :partial => "edit_update_value",:locals => {:object_attribute=>bo_attribute(@wf_field_update.bo_code,@wf_field_update.object_attribute),:f=>f} %>
+    <% end %>
+
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
+        <%= link_to t(:delete), {:action => "destroy", :id => @wf_field_update},:method => :delete,:confirm => t(:label_are_you_sure),:class=>"btn btn-danger"%>
+        <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
+    <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_field_update_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:save_and_new), {:action => "update",:save_and_new=>"Y"},{:class=>"submit"} %></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"index"})%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_irm_wf_field_update_new) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @wf_field_update %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="wf_field_update_name"><%=t(:label_irm_wf_field_update_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"wf_field_update_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_field_update_field_update_code"><%=t(:label_irm_wf_field_update_field_update_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :field_update_code ,:irm_uppercase=>true,:required=>true ,:id=>"wf_field_update_field_update_code"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_field_update_description"><%=(t :label_irm_wf_field_update_description)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60,:id=>"wf_field_update_description"%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="bo_code"><%=t(:label_irm_wf_field_update_bo_code)%></label></td>
-              <td class="dataCol"><%=@wf_field_update[:bo_name]%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="object_attribute"><%=t(:label_irm_wf_field_update_object_attribute)%></label></td>
-              <td class="dataCol"><%=@wf_field_update[:object_attribute_name]%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
+      </table>
+      <div class="page-block-body">
+        <%= error_for @wf_field_update %>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a %>
+          </div>
+        </div>
+
+        <%= content_for :form_block_b %>
+
+      </div>
+
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title">
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
       </table>
     </div>
-    <%= render :partial => "edit_update_value",:locals => {:object_attribute=>bo_attribute(@wf_field_update.bo_code,@wf_field_update.object_attribute),:f=>f} %>
 
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:save_and_new), {:action => "update",:save_and_new=>"Y"},{:class=>"submit"} %></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"index"})%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
