--- a/app/views/irm/wf_field_updates/_new_form.html.erb
+++ b/app/views/irm/wf_field_updates/_new_form.html.erb
@@ -1,102 +1,105 @@
-<%= form_for(@wf_field_update,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-  <%= hidden_params_field(:source_str)%>
-  <%= back_url_hidden_field_tag%>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+<%= form_for(@wf_field_update,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+    <%= hidden_params_field(:source_str)%>
+    <% content_for :form_block_a do %>
+        <table class="form-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label for="wf_field_update_name"><%=t(:label_irm_wf_field_update_name)%></label></td>
+                <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"wf_field_update_name"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_field_update_field_update_code"><%=t(:label_irm_wf_field_update_field_update_code)%></label></td>
+                <td class="data-col"><%=f.text_field :field_update_code ,:irm_uppercase=>true,:required=>true ,:id=>"wf_field_update_field_update_code"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_field_update_description"><%=(t :label_irm_wf_field_update_description)%></label></td>
+                <td class="data-col" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60,:id=>"wf_field_update_description"%></td>
+              </tr>
+              <% if @wf_field_update.bo_code.present? %>
+                <td class="label-col"><label for="bo_code"><%=t(:label_irm_wf_field_update_bo_code)%></label></td>
+                <td class="data-col"><label><%= bo_name(@wf_field_update.bo_code)%></label></td>
+                <td class="label-col empty">&nbsp;<%= f.hidden_field(:bo_code,:id=>"bo_code") %></td>
+                <td class="data-col empty">&nbsp;</td>
+              <% else %>
+              <tr>
+                <td class="label-col"><label for="bo_code"><%=t(:label_irm_wf_field_update_bo_code)%></label></td>
+                <td class="data-col"><%=f.blank_select :bo_code,available_business_object,{}, {:id=>"bo_code",:required=>true}%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <% end %>
+              <tr>
+                <td class="label-col"><label for="object_attribute"><%=t(:label_irm_wf_field_update_object_attribute)%></label></td>
+                <td class="data-col"><%=f.blank_select :object_attribute,available_updatedable_object_attribute(@wf_field_update.bo_code), {},{:id=>"object_attribute",
+                                                                            :required=>true,
+                                                                            :href=>url_for(:controller=>"irm/object_attributes",:action=>"updateable_columns",:format=>"json",:business_object_code=>"${bo_code}"),
+                                                                            :depend=>"bo_code"}%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+          </tbody>
+        </table>
+    <% end %>
+    <% content_for :form_block_b do%>
+      <div  id="fieldUpdateValue" href="<%= url_for(:action=>"set_value",:bo_code=>"{bo_code}",:object_attribute=>"{object_attribute}",:format=>:js) %>">
+        <% if(@wf_field_update.bo_code.present?&&@wf_field_update.object_attribute.present?&&@wf_field_update.value.present?) %>
+            <%= render :partial => "edit_update_value",:locals => {:object_attribute=>bo_attribute(@wf_field_update.bo_code,@wf_field_update.object_attribute),:f=>f} %>
+        <% end %>
+      </div>
+    <% end %>
+
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
+        <%= link_to t(:save_and_new), {:action => "create",:save_and_new=>"Y"},{:class=>"btn submit"} %>
+        <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
+    <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_field_update_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:save_and_new), {:action => "create",:save_and_new=>"Y"},{:class=>"submit"} %></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"index"})%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_irm_wf_field_update_new) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @wf_field_update %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="wf_field_update_name"><%=t(:label_irm_wf_field_update_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"wf_field_update_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_field_update_field_update_code"><%=t(:label_irm_wf_field_update_field_update_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :field_update_code ,:irm_uppercase=>true,:required=>true ,:id=>"wf_field_update_field_update_code"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_field_update_description"><%=(t :label_irm_wf_field_update_description)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60,:id=>"wf_field_update_description"%></td>
-            </tr>
-            <% if @wf_field_update.bo_code.present? %>
-              <td class="labelCol"><label for="bo_code"><%=t(:label_irm_wf_field_update_bo_code)%></label></td>
-              <td class="dataCol"><%= bo_name(@wf_field_update.bo_code)%></td>
-              <td class="labelCol empty">&nbsp;<%= f.hidden_field(:bo_code,:id=>"bo_code") %></td>
-              <td class="dataCol empty">&nbsp;</td>
-            <% else %>
-            <tr>
-              <td class="labelCol"><label for="bo_code"><%=t(:label_irm_wf_field_update_bo_code)%></label></td>
-              <td class="dataCol"><%=f.blank_select :bo_code,available_business_object,{}, {:id=>"bo_code",:required=>true}%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <% end %>
-            <tr>
-              <td class="labelCol"><label for="object_attribute"><%=t(:label_irm_wf_field_update_object_attribute)%></label></td>
-              <td class="dataCol"><%=f.blank_select :object_attribute,available_updatedable_object_attribute(@wf_field_update.bo_code), {},{:id=>"object_attribute",
-                                                                          :required=>true,
-                                                                          :href=>url_for(:controller=>"irm/object_attributes",:action=>"updateable_columns",:format=>"json",:business_object_code=>"${bo_code}"),
-                                                                          :depend=>"bo_code"}%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
+      </table>
+      <div class="page-block-body">
+        <%= error_for @wf_field_update %>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a %>
+          </div>
+        </div>
+
+        <%= content_for :form_block_b %>
+
+      </div>
+
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title">
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
       </table>
     </div>
-    <div  id="fieldUpdateValue" href="<%= url_for(:action=>"set_value",:bo_code=>"{bo_code}",:object_attribute=>"{object_attribute}",:format=>:js) %>">
-      <% if(@wf_field_update.bo_code.present?&&@wf_field_update.object_attribute.present?&&@wf_field_update.value.present?) %>
-          <%= render :partial => "edit_update_value",:locals => {:object_attribute=>bo_attribute(@wf_field_update.bo_code,@wf_field_update.object_attribute),:f=>f} %>
-      <% end %>
-    </div>
 
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-             <div class="button"><%= link_to t(:save_and_new), {:action => "create",:save_and_new=>"Y"},{:class=>"submit"} %></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
-
 
 <script type="text/javascript">
   $(function(){
@@ -104,7 +107,7 @@
       $("#object_attribute").change(function(){
 
           var object_attribute = $("#object_attribute").val();
-          var bo_code = $("#bo_code").val("value");
+          var bo_code = $("#bo_code").val();
           var url = decodeURIComponent($("#fieldUpdateValue").attr("href"));
           url = url.replace("{object_attribute}",object_attribute).replace("{bo_code}",bo_code)
           $("#fieldUpdateValue").load(url);
