--- a/app/views/irm/wf_mail_alerts/_edit_form.html.erb
+++ b/app/views/irm/wf_mail_alerts/_edit_form.html.erb
@@ -1,109 +1,98 @@
-<style type="text/css">
-  div.recipient{
-      float:left;
-  }
-  div.recipientLabel{
-      padding: 0px 5px 0px 15px;
-  }
-  div.recipientElement{
-      float:left;
-      width:24%;
-  }
-</style>
-<%= form_for(@wf_mail_alert,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-  <%= hidden_params_field(:source_str)%>
-  <%= back_url_hidden_field_tag%>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+<%= form_for(@wf_mail_alert,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+    <%= hidden_params_field(:source_str)%>
+    <% content_for :form_block_a do %>
+        <table class="form-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label for="wf_mail_alert_name"><%=t(:label_irm_wf_mail_alert_name)%></label></td>
+                <td class="data-col"><%=f.text_field :name, :required=>true ,:size=>60,:id=>"wf_mail_alert_name"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_mail_alert_mail_alert_code"><%=t(:label_irm_wf_mail_alert_mail_alert_code)%></label></td>
+                <td class="data-col"><label><%=@wf_mail_alert.mail_alert_code%></label></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="bo_code"><%=t(:label_irm_wf_mail_alert_bo_code)%></label></td>
+                <td class="data-col"><label><%= bo_name(@wf_mail_alert.bo_code)%></label></td>
+                <td class="label-col empty">&nbsp;<%= f.hidden_field(:bo_code,:id=>"bo_code") %></td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_mail_alert_mail_template_code"><%=t(:label_irm_wf_mail_alert_mail_template_code)%></label></td>
+                <td class="data-col"><%=f.blank_select :mail_template_code,available_mail_template,{}, :required=>true ,:id=>"wf_mail_alert_mail_template_code"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_mail_alert_mail_template_code"><%=t(:label_irm_wf_mail_recipients)%></label></td>
+                <td class="data-col" colspan="3">
+                  <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_mail_alert.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:recipient_str,:str_value=>@wf_mail_alert.get_recipient_str,:size=>7} %>
+                </td>
+              </tr>
+
+              <tr>
+                <td class="label-col"><label for="wf_mail_alert_additional_email"><%=t(:label_irm_wf_mail_alert_additional_email)%></label></td>
+                <td class="data-col" colspan="3" width="82%"><%=f.text_area :additional_email,:rows=>4,:cols=>60%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="wf_mail_alert_from_email"><%=t(:label_irm_wf_mail_alert_from_email)%></label></td>
+                <td class="data-col"><%=f.text_field :from_email, :id=>"wf_mail_alert_from_email"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+          </tbody>
+        </table>
+    <% end %>
+
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
+        <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
+    <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_mail_alert_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:save_and_new), {:action => "update",:save_and_new=>"Y"},{:class=>"submit"} %></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"index"})%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_irm_wf_rule_time_trigger_new) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @wf_mail_alert %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="wf_mail_alert_name"><%=t(:label_irm_wf_mail_alert_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:size=>60,:id=>"wf_mail_alert_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_mail_alert_mail_alert_code"><%=t(:label_irm_wf_mail_alert_mail_alert_code)%></label></td>
-              <td class="dataCol"><%=@wf_mail_alert.mail_alert_code%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="bo_code"><%=t(:label_irm_wf_mail_alert_bo_code)%></label></td>
-              <td class="dataCol"><%= bo_name(@wf_mail_alert.bo_code)%></td>
-              <td class="labelCol empty">&nbsp;<%= f.hidden_field(:bo_code,:id=>"bo_code") %></td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_mail_alert_mail_template_code"><%=t(:label_irm_wf_mail_alert_mail_template_code)%></label></td>
-              <td class="dataCol"><%=f.blank_select :mail_template_code,available_mail_template,{}, :required=>true ,:id=>"wf_mail_alert_mail_template_code"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_mail_alert_mail_template_code"><%=t(:label_irm_wf_mail_recipients)%></label></td>
-              <td class="dataCol" colspan="3">
-                <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_mail_alert.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:recipient_str,:str_value=>@wf_mail_alert.get_recipient_str,:size=>7} %>
-              </td>
-            </tr>
+      </table>
+      <div class="page-block-body">
+        <%= error_for @wf_mail_alert %>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a %>
+          </div>
+        </div>
 
-            <tr>
-              <td class="labelCol"><label for="wf_mail_alert_additional_email"><%=t(:label_irm_wf_mail_alert_additional_email)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><%=f.text_area :additional_email,:rows=>4,:cols=>60%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="wf_mail_alert_from_email"><%=t(:label_irm_wf_mail_alert_from_email)%></label></td>
-              <td class="dataCol"><%=f.text_field :from_email, :id=>"wf_mail_alert_from_email"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
+      </div>
+
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title">
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
       </table>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:save_and_new), {:action => "update",:save_and_new=>"Y"},{:class=>"submit"} %></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"index"})%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
 
 
