修正asset文件名称,使用文件名符合编译要求

--- a/modules/bootstrap/app/assets/stylesheets/application.css
+++ b/modules/bootstrap/app/assets/stylesheets/application.css
@@ -6,6 +6,7 @@
  *= require bootstrap/bootstrap_and_overrides
  *= require framework/framework
  *= require plugins/treeview
+ *= require plugins/colorbox
 */
 
 
